# Othello

./: .gitignore  CMakeLists.txt  GameJudge.cpp  GameJudge.h  GameState.cpp  GameState.cpp.autosave  GameState.h  GameState.h.autosave  OthelloAI.cpp  OthelloAI.cpp.autosave  OthelloAI.h  OthelloAI.h.autosave  aiSave.txt  aiSave2.txt  aiSave3.txt  aiSave4 - 副本 (2).txt  aiSave4 - 副本.txt  aiSave4.txt  aiSave5.txt  gamewindow.cpp  gamewindow.h  gameworker.cpp  gameworker.h  genetichost.cpp  genetichost.h  icons.qrc  main.cpp  main_gui.cpp  piecebutton.cpp  piecebutton.h  record.txt  record3.txt  record4 - 副本.txt  record4.txt  tools.cpp  tools.h  unit_test.cpp
